--- a/pages/register.html
+++ b/pages/register.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>劳工平台</title>
+	<title>账户注册|劳工平台</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<!-- <link rel="stylesheet" type="text/css" href="css/bootstrap3.3.7.min.css"> -->
 	<link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/index.css">
-	 <link rel="stylesheet" href="css/swiper-3.4.2.min.css">
-	<script src="js/jquery3.2.1.min.js"></script>
-	<script src="js/bootstrap3.3.7.min.js"></script>
-	<script src="js/swiper-3.4.2.min.js"></script>
-	<script src="js/index.js"></script>
+	<link rel="stylesheet" type="text/css" href="../css/index.css">
+	 <link rel="stylesheet" href="../css/swiper-3.4.2.min.css">
+	<script src="../js/jquery3.2.1.min.js"></script>
+	<script src="../js/bootstrap3.3.7.min.js"></script>
+	<script src="../js/swiper-3.4.2.min.js"></script>
+	<script src="../js/index.js"></script>
 </head>
 <body>
 	<div class="header body navbar-fixed-top">
@@ -36,7 +36,7 @@
 						<div class="col-lg-3 first" >
 							<div class="navbar-header">
 								<a class="navbar-brand" href="#" title="logo">
-								<img src="img/logo.png" alt="">
+								<img src="../img/logo.png" alt="">
 							</a>
 						</div>
 						</div>
@@ -70,7 +70,7 @@
 						</div>
 						<div class="col-lg-2 forth">
 							<ul class="nav navbar-nav navbar-right">
-								<li><a href="pages/register.html" title="" target="_blank">免费注册</a></li>
+								<li><a href="#" title="">免费注册</a></li>
 								<li><a href="#" title="">请登录</a></li>
 							</ul>
 						</div>
@@ -79,12 +79,12 @@
 			</div>
 		</div>
 	</div>	
-<!-- 	</div class="content">
+	<!-- </div class="content">
 		<div class="swiper-container">
 		    <div class="swiper-wrapper">
-		        <div class="swiper-slide"><a href=""><img src="img/slide1.png" alt=""></a></div>
-		        <div class="swiper-slide"><a href=""><img src="img/slide2.png" alt=""></a></div>
-		        <div class="swiper-slide"><a href=""><img src="img/slide3.png" alt=""></a></div>
+		        <div class="swiper-slide"><a href=""><img src="../img/slide1.png" alt=""></a></div>
+		        <div class="swiper-slide"><a href=""><img src="../img/slide2.png" alt=""></a></div>
+		        <div class="swiper-slide"><a href=""><img src="../img/slide3.png" alt=""></a></div>
 		    </div>
 		    <div class="swiper-pagination"></div>
 		    <div class="swiper-button-prev"></div>
@@ -116,20 +116,20 @@
 				<div class="row">
 					<div class="col-lg-4">
 						<ul>
-							<li ><a href="" title=""><img src="img/card6.png" alt=""></a></li>
-							<li ><a href="" title=""><img src="img/card5.png" alt=""></a></li>
+							<li ><a href="" title=""><img src="../img/card6.png" alt=""></a></li>
+							<li ><a href="" title=""><img src="../img/card5.png" alt=""></a></li>
 						</ul>
 					</div>
 					<div class="col-lg-4">
 						<ul>
-							<li ><a href="" title=""><img src="img/card4.png" alt=""></a></li>
-							<li ><a href="" title=""><img src="img/card3.png" alt=""></a></li>
+							<li ><a href="" title=""><img src="../img/card4.png" alt=""></a></li>
+							<li ><a href="" title=""><img src="../img/card3.png" alt=""></a></li>
 						</ul>
 					</div>
 					<div class="col-lg-4">
 						<ul>
-							<li ><a href="" title=""><img src="img/card2.png" alt=""></a></li>
-							<li ><a href="" title=""><img src="img/card1.png" alt=""></a></li>
+							<li ><a href="" title=""><img src="../img/card2.png" alt=""></a></li>
+							<li ><a href="" title=""><img src="../img/card1.png" alt=""></a></li>
 						</ul>
 					</div>
 				</div>
@@ -153,20 +153,20 @@
 				<div class="row">
 					<div class="col-lg-4">
 						<ul>
-							<li ><a href="" title=""><img src="img/card6.png" alt=""></a></li>
-							<li ><a href="" title=""><img src="img/card5.png" alt=""></a></li>
+							<li ><a href="" title=""><img src="../img/card6.png" alt=""></a></li>
+							<li ><a href="" title=""><img src="../img/card5.png" alt=""></a></li>
 						</ul>
 					</div>
 					<div class="col-lg-4">
 						<ul>
-							<li ><a href="" title=""><img src="img/card4.png" alt=""></a></li>
-							<li ><a href="" title=""><img src="img/card3.png" alt=""></a></li>
+							<li ><a href="" title=""><img src="../img/card4.png" alt=""></a></li>
+							<li ><a href="" title=""><img src="../img/card3.png" alt=""></a></li>
 						</ul>
 					</div>
 					<div class="col-lg-4">
 						<ul>
-							<li ><a href="" title=""><img src="img/card2.png" alt=""></a></li>
-							<li ><a href="" title=""><img src="img/card1.png" alt=""></a></li>
+							<li ><a href="" title=""><img src="../img/card2.png" alt=""></a></li>
+							<li ><a href="" title=""><img src="../img/card1.png" alt=""></a></li>
 						</ul>
 					</div>
 				</div>
