--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<script src="js/index.js"></script>
 </head>
 <body>
-	<div class="header body navbar-fixed-top">
+	<div class="header navbar-fixed-top">
 		<div class="wrap">
 			<div class="navbar navbar-default">
 				<div class="container">
@@ -79,7 +79,7 @@
 			</div>
 		</div>
 	</div>	
-<!-- 	</div class="content">
+	</div class="content">
 		<div class="swiper-container">
 		    <div class="swiper-wrapper">
 		        <div class="swiper-slide"><a href=""><img src="img/slide1.png" alt=""></a></div>
@@ -184,7 +184,7 @@
 				<a href="#" title="" class="btn btn-success btn-lg" type="button">发布招聘</a>
 			</div>
 		</div>
-	</div> -->
+	</div>
 	<div class="container footer text-center">
 		<span>Copyright © 2018 劳工平台网络技术（杭州）有限公司 All rights reserved</span>
 		<span>备案号：浙ICP备16031282号</span>
