--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 	<meta charset="UTF-8">
 	<title>劳工平台</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<!-- <link rel="stylesheet" type="text/css" href="css/bootstrap3.3.7.min.css"> -->
-	<link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap3.3.7.min.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	 <link rel="stylesheet" href="css/swiper-3.4.2.min.css">
 	<script src="js/jquery3.2.1.min.js"></script>
@@ -78,8 +77,8 @@
 				</div>
 			</div>
 		</div>
-	</div>	
-	</div class="content">
+	</div>
+	<div class="content">
 		<div class="swiper-container">
 		    <div class="swiper-wrapper">
 		        <div class="swiper-slide"><a href=""><img src="img/slide1.png" alt=""></a></div>
