--- a/pages/register.html
+++ b/pages/register.html
@@ -78,112 +78,9 @@
 				</div>
 			</div>
 		</div>
-	</div>	
-	</div class="content">
-		<div class="swiper-container">
-		    <div class="swiper-wrapper">
-		        <div class="swiper-slide"><a href=""><img src="../img/slide1.png" alt=""></a></div>
-		        <div class="swiper-slide"><a href=""><img src="../img/slide2.png" alt=""></a></div>
-		        <div class="swiper-slide"><a href=""><img src="../img/slide3.png" alt=""></a></div>
-		    </div>
-		    <div class="swiper-pagination"></div>
-		    <div class="swiper-button-prev"></div>
-		    <div class="swiper-button-next"></div>
-		</div>
-		<div class="roll">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12">
-						<ul>
-							<li class="clearfix">
-								<span class="pull-left">雇主138****9797雇佣了设计师葛**，雇佣金额:222</span>
-								<span class="pull-right">雇主138****9797雇佣了设计师葛**，雇佣金额:222</span>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="card">
-			<div class="container cardtitle clearfix">
-					<div class="pull-left">
-						<span class="headline">点击推荐</span>
-						<span class="smallheadline">美好的设计师来自靠谱的设计</span>
-					</div>
-					<div class="pull-right"><a href="">更多>></a></div>
-			</div>
-			<div class="container cardlist ">
-				<div class="row">
-					<div class="col-lg-4">
-						<ul>
-							<li ><a href="" title=""><img src="../img/card6.png" alt=""></a></li>
-							<li ><a href="" title=""><img src="../img/card5.png" alt=""></a></li>
-						</ul>
-					</div>
-					<div class="col-lg-4">
-						<ul>
-							<li ><a href="" title=""><img src="../img/card4.png" alt=""></a></li>
-							<li ><a href="" title=""><img src="../img/card3.png" alt=""></a></li>
-						</ul>
-					</div>
-					<div class="col-lg-4">
-						<ul>
-							<li ><a href="" title=""><img src="../img/card2.png" alt=""></a></li>
-							<li ><a href="" title=""><img src="../img/card1.png" alt=""></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="page">
-				<span>1</span>
-				<span>2</span>
-				<span>3</span>
-				<span>...</span>
-			</div>
-		</div>
-		<div class="card" style="background: white;">
-			<div class="container cardtitle clearfix">
-					<div class="pull-left">
-						<span class="headline">点击推荐</span>
-						<span class="smallheadline">美好的设计师来自靠谱的设计</span>
-					</div>
-					<div class="pull-right"><a href="">更多作品>></a></div>
-			</div>
-			<div class="container cardlist ">
-				<div class="row">
-					<div class="col-lg-4">
-						<ul>
-							<li ><a href="" title=""><img src="../img/card6.png" alt=""></a></li>
-							<li ><a href="" title=""><img src="../img/card5.png" alt=""></a></li>
-						</ul>
-					</div>
-					<div class="col-lg-4">
-						<ul>
-							<li ><a href="" title=""><img src="../img/card4.png" alt=""></a></li>
-							<li ><a href="" title=""><img src="../img/card3.png" alt=""></a></li>
-						</ul>
-					</div>
-					<div class="col-lg-4">
-						<ul>
-							<li ><a href="" title=""><img src="../img/card2.png" alt=""></a></li>
-							<li ><a href="" title=""><img src="../img/card1.png" alt=""></a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="page">
-				<span>1</span>
-				<span>2</span>
-				<span>3</span>
-				<span>...</span>
-			</div>
-		</div>
-		<div class="employment" style="background: #F7F7F7;">
-			<h3 class="text-center">点雇的设计师已经准备就绪 就等你一声令下</h3>
-			<div class="text-center button">
-				<a href="#" title="" class="btn btn-success btn-lg" type="button">发布招聘</a>
-			</div>
-		</div>
+	</div>
+	<div class="register container">aa
+		
 	</div>
 	<div class="container footer text-center">
 		<span>Copyright © 2018 劳工平台网络技术（杭州）有限公司 All rights reserved</span>
