--- a/pages/register.html
+++ b/pages/register.html
@@ -14,7 +14,7 @@
 	<script src="../js/index.js"></script>
 </head>
 <body>
-	<div class="header navbar-fixed-top">
+	<div class="header navbar-fixed-top" style="-webkit-transform: translateZ(0);">
 		<div class="wrap">
 			<div class="navbar navbar-default">
 				<div class="container">
@@ -80,7 +80,7 @@
 		</div>
 	</div>
 	<div class="register container">aa
-		
+		<form role="form"></form>
 	</div>
 	<div class="container footer text-center">
 		<span>Copyright © 2018 劳工平台网络技术（杭州）有限公司 All rights reserved</span>
