--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script src="js/index.js"></script>
 </head>
 <body>
-	<div class="header navbar-fixed-top">
+	<div class="header navbar-fixed-top" style="-webkit-transform: translateZ(0);">
 		<div class="wrap">
 			<div class="navbar navbar-default">
 				<div class="container">
