--- a/pages/register.html
+++ b/pages/register.html
@@ -79,8 +79,36 @@
 			</div>
 		</div>
 	</div>
-	<div class="register container">aa
-		<form role="form"></form>
+	<div class="register container" style="background: #eee;">
+		<div class="col-lg-7 border">
+			aa
+		</div>
+		<div class="col-lg-5 border">
+			<!-- <div>
+				一键注册BOSS直聘
+			</div> -->
+			<h2 class="text-center title">一键注册BOSS直聘</h2>
+			<form>
+			 <div class="form-row phone">
+			 	<input type="email" placeholder="手机号">
+			 </div>
+			 <div class="form-row verify">
+			 	<span>
+			 		<input type="password" name="" style="height: 44px;width: " placeholder="验证码">
+			 	</span
+			 	><span>
+			 		<img src="../img/logo.png" alt="" style="margin-top: -2px; border: 1px solid #666;">
+			 	</span>
+			 </div>
+			 <div class="form-row message">
+			 	<input type="email" placeholder="短信验证码">
+			 </div>
+			 <div class="form-row submit">
+			 	<button type="submit" class="btn btn-default btn-group-justified">立即注册</button>
+			 </div>
+		</form>
+		</div>
+		
 	</div>
 	<div class="container footer text-center">
 		<span>Copyright © 2018 劳工平台网络技术（杭州）有限公司 All rights reserved</span>
