--- a/pages/register.html
+++ b/pages/register.html
@@ -79,34 +79,40 @@
 			</div>
 		</div>
 	</div>
-	<div class="register container" style="background: #eee;">
-		<div class="col-lg-7 border">
+	<div class="register container" style="background: #F7F7F7;">
+		<div class="col-lg-7">
 			aa
 		</div>
-		<div class="col-lg-5 border">
-			<!-- <div>
-				一键注册BOSS直聘
-			</div> -->
-			<h2 class="text-center title">一键注册BOSS直聘</h2>
+		<div class="col-lg-5">
+			<h2 class="text-center title">一键注册劳工平台</h2>
 			<form>
-			 <div class="form-row phone">
-			 	<input type="email" placeholder="手机号">
-			 </div>
-			 <div class="form-row verify">
-			 	<span>
-			 		<input type="password" name="" style="height: 44px;width: " placeholder="验证码">
-			 	</span
-			 	><span>
-			 		<img src="../img/logo.png" alt="" style="margin-top: -2px; border: 1px solid #666;">
-			 	</span>
-			 </div>
-			 <div class="form-row message">
-			 	<input type="email" placeholder="短信验证码">
-			 </div>
-			 <div class="form-row submit">
-			 	<button type="submit" class="btn btn-default btn-group-justified">立即注册</button>
-			 </div>
-		</form>
+				 <div class="form-row phone">
+				 	<input type="email" placeholder="手机号">
+				 </div>
+				 <div class="form-row verify">
+				 	<span style="width: 65%">
+				 		<input type="password" name="" style="height: 46px;" placeholder="验证码">
+				 	</span
+				 	><span>
+				 		<img src="../img/verify.png" alt="">
+				 	</span>
+				 </div>
+				 <div class="form-row message">
+				 	<input type="email" placeholder="短信验证码">
+				 </div>
+				 <div class="form-row submit">
+				 	<button type="submit" class="btn btn-success btn-block btn-lg">立即注册</button>
+				 </div>
+				<div class="agree">
+					<input type="checkbox" aria-label="...">
+					同意劳工平台
+					<a href="" title="">用户协议及隐私政策</a>
+				</div>
+				<div class="login">
+					已有账号
+					<a href="" title="">直接登录</a>
+				</div>
+			</form>
 		</div>
 		
 	</div>
