--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>test</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap3.3.7.min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap3.3.7.min.css"> -->
 	<!-- <link rel="stylesheet" type="text/css" href="./css/index.css"> -->
 	<script src="./js/jquery3.2.1.min.js"></script>
 	<script src="./js/bootstrap3.3.7.min.js"></script>
