--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<div class="col-lg-2 forth">
 							<ul class="nav navbar-nav navbar-right">
 								<li><a href="pages/register.html" title="" target="_blank">免费注册</a></li>
-								<li><a href="#" title="">请登录</a></li>
+								<li><a href="pages/login.html" title="" target="_blank">请登录</a></li>
 							</ul>
 						</div>
 					</div>
