--- a/pages/login.html
+++ b/pages/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>账户注册|劳工平台</title>
+	<title>账户登录|劳工平台</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<!-- <link rel="stylesheet" type="text/css" href="css/bootstrap3.3.7.min.css"> -->
 	<link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -84,10 +84,13 @@
 			aa
 		</div>
 		<div class="col-lg-5">
-			<h2 class="text-center title">一键注册劳工平台</h2>
+			<h2 class="text-center title">登录劳工平台</h2>
 			<form>
 				 <div class="form-row phone">
 				 	<input type="email" placeholder="手机号">
+				 </div>
+				 <div class="form-row message">
+				 	<input type="email" placeholder="密码">
 				 </div>
 				 <div class="form-row verify">
 				 	<span style="width: 65%">
@@ -97,20 +100,12 @@
 				 		<img src="../img/verify.png" alt="">
 				 	</span>
 				 </div>
-				 <div class="form-row message">
-				 	<input type="email" placeholder="短信验证码">
-				 </div>
 				 <div class="form-row submit">
-				 	<button type="submit" class="btn btn-success btn-block btn-lg">立即注册</button>
+				 	<button type="submit" class="btn btn-success btn-block btn-lg">登录</button>
 				 </div>
-				<div class="agree">
-					<input type="checkbox" aria-label="...">
-					同意劳工平台
-					<a href="" title="">用户协议及隐私政策</a>
-				</div>
-				<div class="login">
-					已有账号
-					<a href="login.html" title="">直接登录</a>
+				<div class="login" style="margin-top: 30px;">
+					没有账号
+					<a href="register.html" title="">立即注册</a>
 				</div>
 			</form>
 		</div>
