--- a/pages/register.html
+++ b/pages/register.html
@@ -79,42 +79,43 @@
 			</div>
 		</div>
 	</div>
-	<div class="register container" style="background: #F7F7F7;">
-		<div class="col-lg-7">
-			aa
+	<div class="register container"">
+		<div class="row">
+			<div class="col-lg-7 register-right">
+				<img src="../img/register.png" alt="">
+			</div>
+			<div class="col-lg-5 register-left">
+				<h2 class="text-center title">一键注册劳工平台</h2>
+				<form>
+					 <div class="form-row phone">
+					 	<input type="email" placeholder="手机号">
+					 </div>
+					 <div class="form-row verify">
+					 	<span style="width: 65%">
+					 		<input type="password" name="" style="height: 46px;" placeholder="验证码">
+					 	</span
+					 	><span>
+					 		<img src="../img/verify.png" alt="">
+					 	</span>
+					 </div>
+					 <div class="form-row message">
+					 	<input type="email" placeholder="短信验证码">
+					 </div>
+					 <div class="form-row submit">
+					 	<button type="submit" class="btn btn-success btn-block btn-lg">立即注册</button>
+					 </div>
+					<div class="agree">
+						<input type="checkbox" aria-label="...">
+						同意劳工平台
+						<a href="" title="">用户协议及隐私政策</a>
+					</div>
+					<div class="login">
+						已有账号
+						<a href="login.html" title="">直接登录</a>
+					</div>
+				</form>
+			</div>
 		</div>
-		<div class="col-lg-5">
-			<h2 class="text-center title">一键注册劳工平台</h2>
-			<form>
-				 <div class="form-row phone">
-				 	<input type="email" placeholder="手机号">
-				 </div>
-				 <div class="form-row verify">
-				 	<span style="width: 65%">
-				 		<input type="password" name="" style="height: 46px;" placeholder="验证码">
-				 	</span
-				 	><span>
-				 		<img src="../img/verify.png" alt="">
-				 	</span>
-				 </div>
-				 <div class="form-row message">
-				 	<input type="email" placeholder="短信验证码">
-				 </div>
-				 <div class="form-row submit">
-				 	<button type="submit" class="btn btn-success btn-block btn-lg">立即注册</button>
-				 </div>
-				<div class="agree">
-					<input type="checkbox" aria-label="...">
-					同意劳工平台
-					<a href="" title="">用户协议及隐私政策</a>
-				</div>
-				<div class="login">
-					已有账号
-					<a href="login.html" title="">直接登录</a>
-				</div>
-			</form>
-		</div>
-		
 	</div>
 	<div class="container footer text-center">
 		<span>Copyright © 2018 劳工平台网络技术（杭州）有限公司 All rights reserved</span>
