--- a/pages/login.html
+++ b/pages/login.html
@@ -79,37 +79,38 @@
 			</div>
 		</div>
 	</div>
-	<div class="register container" style="background: #F7F7F7;">
-		<div class="col-lg-7">
-			aa
+	<div class="register container">
+		<div class="row">
+			<div class="col-lg-7 register-right">
+				<img src="../img/register.png" alt="">
+			</div>
+			<div class="col-lg-5 register-left">
+				<h2 class="text-center title">登录劳工平台</h2>
+				<form>
+					 <div class="form-row phone">
+					 	<input type="email" placeholder="手机号">
+					 </div>
+					 <div class="form-row message">
+					 	<input type="email" placeholder="密码">
+					 </div>
+					 <div class="form-row verify">
+					 	<span style="width: 65%">
+					 		<input type="password" name="" style="height: 46px;" placeholder="验证码">
+					 	</span
+					 	><span>
+					 		<img src="../img/verify.png" alt="">
+					 	</span>
+					 </div>
+					 <div class="form-row submit">
+					 	<button type="submit" class="btn btn-success btn-block btn-lg">登录</button>
+					 </div>
+					<div class="login" style="margin-top: 30px;">
+						没有账号
+						<a href="register.html" title="">立即注册</a>
+					</div>
+				</form>
+			</div>
 		</div>
-		<div class="col-lg-5">
-			<h2 class="text-center title">登录劳工平台</h2>
-			<form>
-				 <div class="form-row phone">
-				 	<input type="email" placeholder="手机号">
-				 </div>
-				 <div class="form-row message">
-				 	<input type="email" placeholder="密码">
-				 </div>
-				 <div class="form-row verify">
-				 	<span style="width: 65%">
-				 		<input type="password" name="" style="height: 46px;" placeholder="验证码">
-				 	</span
-				 	><span>
-				 		<img src="../img/verify.png" alt="">
-				 	</span>
-				 </div>
-				 <div class="form-row submit">
-				 	<button type="submit" class="btn btn-success btn-block btn-lg">登录</button>
-				 </div>
-				<div class="login" style="margin-top: 30px;">
-					没有账号
-					<a href="register.html" title="">立即注册</a>
-				</div>
-			</form>
-		</div>
-		
 	</div>
 	<div class="container footer text-center">
 		<span>Copyright © 2018 劳工平台网络技术（杭州）有限公司 All rights reserved</span>
