--- a/test.html
+++ b/test.html
@@ -11,13 +11,24 @@
 	<style type="text/css" media="screen">
 		*{margin: 0;padding: 0;}
 		span {display: inline-block;}
+		input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+			color: red;font-size:16px;
+			}
+			input:-moz-placeholder, textarea:-moz-placeholder {
+			color:red;font-size:16px;
+			}
+			input::-moz-placeholder, textarea::-moz-placeholder {
+			color:red;font-size:16px;
+			}
+			input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+			color:red;font-size:16px;
 	</style>
 </head>
 <body>
 
 	<div style="width: 300px;height: 34px;">
 			 	<span>
-			 		<input type="password" name="" style="height: 36px;">
+			 		<input type="text" name="" style="height: 36px;" placeholder="测试颜色">
 			 	</span
 			 	><span >
 			 		<img src="img/logo.png" alt="" style="margin-top: -2px; border: 1px solid red;">
