--- a/pages/login.html
+++ b/pages/login.html
@@ -35,7 +35,7 @@
 					<div class="row">
 						<div class="col-lg-3 first" >
 							<div class="navbar-header">
-								<a class="navbar-brand" href="#" title="logo">
+								<a class="navbar-brand" href="../index.html" title="logo">
 								<img src="../img/logo.png" alt="">
 							</a>
 						</div>
@@ -70,8 +70,8 @@
 						</div>
 						<div class="col-lg-2 forth">
 							<ul class="nav navbar-nav navbar-right">
-								<li><a href="#" title="">免费注册</a></li>
-								<li><a href="#" title="">请登录</a></li>
+								<li><a href="register.html" title="">免费注册</a></li>
+								<li><a href="login.html" title="">请登录</a></li>
 							</ul>
 						</div>
 					</div>
