--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					<div class="row">
 						<div class="col-lg-3 first" >
 							<div class="navbar-header">
-								<a class="navbar-brand" href="#" title="logo">
+								<a class="navbar-brand" href="index.html" title="logo">
 								<img src="img/logo.png" alt="">
 							</a>
 						</div>
@@ -69,8 +69,8 @@
 						</div>
 						<div class="col-lg-2 forth">
 							<ul class="nav navbar-nav navbar-right">
-								<li><a href="pages/register.html" title="" target="_blank">免费注册</a></li>
-								<li><a href="pages/login.html" title="" target="_blank">请登录</a></li>
+								<li><a href="pages/register.html" title="" target="_self">免费注册</a></li>
+								<li><a href="pages/login.html" title="" target="_self">请登录</a></li>
 							</ul>
 						</div>
 					</div>
