--- a/pages/login.html
+++ b/pages/login.html
@@ -86,6 +86,7 @@
 			</div>
 			<div class="col-lg-5 register-left">
 				<h2 class="text-center title">登录劳工平台</h2>
+				<div class="error text-center">请输入正确验证码</div>
 				<form>
 					 <div class="form-row phone">
 					 	<input type="email" placeholder="手机号">
@@ -102,7 +103,7 @@
 					 	</span>
 					 </div>
 					 <div class="form-row submit">
-					 	<button type="submit" class="btn btn-success btn-block btn-lg">登录</button>
+					 	<button type="submit">登录</button>
 					 </div>
 					<div class="login" style="margin-top: 30px;">
 						没有账号
