--- a/pages/register.html
+++ b/pages/register.html
@@ -86,23 +86,29 @@
 			</div>
 			<div class="col-lg-5 register-left">
 				<h2 class="text-center title">一键注册劳工平台</h2>
+				<div class="error text-center"></div>
 				<form>
 					 <div class="form-row phone">
-					 	<input type="email" placeholder="手机号">
+					 	<input type="text" placeholder="手机号" value="">
 					 </div>
 					 <div class="form-row verify">
-					 	<span style="width: 65%">
+					 	<span style="width: 66.5%">
 					 		<input type="password" name="" style="height: 46px;" placeholder="验证码">
 					 	</span
 					 	><span>
 					 		<img src="../img/verify.png" alt="">
 					 	</span>
 					 </div>
-					 <div class="form-row message">
-					 	<input type="email" placeholder="短信验证码">
+					  <div class="form-row verify">
+					 	<span style="width: 66.5%">
+					 		<input type="password" name="" style="height: 46px;" placeholder="短信验证码">
+					 	</span
+					 	><span style="">	
+					 		<button type="button" style="height: 46px;width: 122px;margin-top: -2px;">发送验证码</button>
+					 	</span>
 					 </div>
 					 <div class="form-row submit">
-					 	<button type="submit" class="btn btn-success btn-block btn-lg">立即注册</button>
+					 	<button type="button">立即注册</button>
 					 </div>
 					<div class="agree">
 						<input type="checkbox" aria-label="...">
