--- a/test.html
+++ b/test.html
@@ -9,39 +9,61 @@
 	<script src="./js/jquery3.2.1.min.js"></script>
 	<script src="./js/bootstrap3.3.7.min.js"></script>
 	<style type="text/css" media="screen">
-		*{margin: 0;padding: 0;}
-		span {display: inline-block;}
-		input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
-			color: red;font-size:16px;
-			}
-			input:-moz-placeholder, textarea:-moz-placeholder {
-			color:red;font-size:16px;
-			}
-			input::-moz-placeholder, textarea::-moz-placeholder {
-			color:red;font-size:16px;
-			}
-			input:-ms-input-placeholder, textarea:-ms-input-placeholder {
-			color:red;font-size:16px;
+		 div{  
+        background-color:blue;  
+        width:200px;  
+        height:100px;  
+        font-size:35px;  
+   		 }  	
 	</style>
 </head>
 <body>
-
-	<div style="width: 300px;height: 34px;">
-			 	<span>
-			 		<input type="text" name="" style="height: 36px;" placeholder="测试颜色">
-			 	</span
-			 	><span >
-			 		<img src="img/logo.png" alt="" style="margin-top: -2px; border: 1px solid red;">
-			 	</span>
-	</div>
-	<div style="margin-top:5px;">
-		<span style="border: 1px solid red;">
-			11
-		</span
-		><span style="border: 1px solid red;">
-			22
-		</span>
-	</div>
+	<center>  
+	<label >请输入验证码：</label><input type="text" id="in1" value="" placeholder="请输入验证码">  
+	<button id="b1">点击验证</button>  
+	    <div></div><label id="l1"></label>  
+	</center>
 
 </body>
+<script type="text/javascript">  
+        $(document).ready(function() {  
+             //我写的验证码  
+            //验证码  
+            var code;  
+            function createCode(){  
+                code = '';//首先默认code为空字符串  
+                var codeLength = 4;//设置长度，这里看需求，我这里设置了4  
+                var codeV = $("div");  
+                //设置随机字符  
+                var random = new Array(0,1,2,3,4,5,6,7,8,9,'A','B','C','D','E','F','G','H','I','J','K','L','M','N','O','P','Q','R', 'S','T','U','V','W','X','Y','Z');  
+                for(var i = 0; i < codeLength; i++){ //循环codeLength 我设置的4就是循环4次     
+                     var index = Math.floor(Math.random()*36); //设置随机数范围,这设置为0 ~ 36    
+                     code += random[index];  //字符串拼接 将每次随机的字符 进行拼接  
+            }  
+                codeV.text(code);//将拼接好的字符串赋值给展示的Value  
+            }  
+          
+            //页面开始加载验证码  
+            createCode();  
+            //验证码Div加载点击事件  
+            $("div").bind('click',function() {  
+                    createCode();  
+                });  
+                  
+            //下面就是判断是否==的代码，无需解释  
+            $("#b1").bind('click',function() {  
+                 var oValue = $("#in1").val().toUpperCase();  
+                 $("#l1").html("");  
+                if(oValue ==""){  
+                    $("#l1").html("<font color='red'>请输入验证码</font>");  
+                }else if(oValue != code){  
+                    $("#l1").html("<font color='red'>验证码不正确，请重新输入</font>");  
+                    oValue = "";  
+                    createCode();  
+                }else{  
+                    $("#l1").html("<font color='blue'>验证码正确</font>");  
+                }  
+            });   
+        });  
+    </script>  
 </html>
